# GLSLangSharp

./: .gitignore  Dependency-Licences.md  README.md  RELEASE_NOTES.md  build.cmd  build.fsx  build.sh  buildnative.cmd  buildnative.sh  deploy.targets  paket.dependencies
.config/: dotnet-tools.json
.github/workflows/: publish.yml
libs/Native/GLSLang/windows/AMD64/: glslang.ilk  glslang.lib
libs/Native/GLSLangSharp/windows/AMD64/: GLSLangNative.exp  GLSLangNative.iobj  GLSLangNative.ipdb  GLSLangNative.lib  glslang.exp  spirv.exp  spirv.iobj  spirv.ipdb  spirv.lib
libs/Native/GLSLangSharp/windows/x86/: GLSLangNative.exp  GLSLangNative.iobj  GLSLangNative.ipdb  GLSLangNative.lib
libs/include/: GlslangToSpv.h  ShaderLang.h  Types.h  intermediate.h
libs/include/glslang/Include/: arrays.h
libs/static/Debug/windows/AMD64/: OGLCompiler.lib  OSDependent.lib
libs/static/Debug/windows/x86/: OGLCompiler.lib  OSDependent.lib
libs/static/Release/windows/AMD64/: GenericCodeGen.lib  HLSL.lib  OGLCompiler.lib  OSDependent.lib  SPIRV-Tools-link.lib  SPIRV-Tools-reduce.lib  SPIRV-Tools-shared.lib  SPIRV.lib  SPVRemapper.lib
libs/static/Release/windows/x86/: HLSL.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  SPVRemapper.lib
src/: GLSLang.sln  UpgradeLog.htm
src/Compiler/: AssemblyInfo.fs  Compiler.fsproj  Program.fs  paket.references
src/GLSLang/: GLSLang.fsproj
src/GLSLangNative/: BUILD.md  CMakeLists.txt  Dockerfile  GLSLangNative.vcxproj  GLSLangNative.vcxproj.filters  Makefile  Makefile.mac  ReadMe.txt  build.sh  glslang.cpp  glslang.h  stdafx.cpp  stdafx.h
src/GLSLangNative/cmake/: Aardvark.cmake  CPM.cmake
src/GLSLangSharp/: GLSLang.fs  GLSLangSharp.fsproj  SpirV.fs  SpirVCodeGenerator.fsx  SpirVCore.fs  SpirVInstructions.fs  SpirVReflection.fs  Wrapper.fs  paket.references  paket.template
src/Tests/: Tests.fs  Tests.fsproj  paket.references
src/Tests/shaders/: test.glsl  test_rtx.glsl  test_rtx_ser.glsl
src/spirv/: GLSLangNative.sln  Makefile  spirv.sln
src/spirv/GLSLangNative/: GLSLangNative.filters  GLSLangNative.vcxproj  spirv.cpp  stdafx.cpp  stdafx.h
src/spirv/glslang/include/: GlslangToSpv.h  ShaderLang.h  Types.h  intermediate.h
src/spirv/glslang/lib/: HLSL.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib
src/spirv/spirv/: ReadMe.txt  spirv.h  spirv.vcxproj  stdafx.h
